projects and translate in two columns

--- a/people.html
+++ b/people.html
@@ -137,7 +137,7 @@
                 </div>
             </div>
             <!-- Column for GIF -->
-            <div class="col-12 col-md-5 order-1 order-md-12 text-left ml-md-5">
+            <div class="col-12 col-md project-text order-md-12 text-left ml-md textDIV">
              <!-- <img src="htmlvideos/people.gif" class="img-fluid" alt="Avatar signing 'WE WHO?'"> -->
            <!-- </div> -->
 
