--- a/translate.html
+++ b/translate.html
@@ -64,76 +64,86 @@
 
 <section class="projects-section bg-light fadeIn" id="Translate">
   <div class="container-fluid" id="disclaimerAvatar">
-        <!-- Challenge Row-->
+
+        <!-- Challenge Row first section-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-            <!-- Column for info -->
+            <!-- Column for text -->
             <div class="col-12 col-md order-2">
-                <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-                    <h5>Text-to-sign translation using animated avatars</h5>
-                    <p class="mb-4">
-                      We are developing tools to translate text into sign language using animated avatars. Such tools have several potential applications. They could support communication between deaf and hearing people in situations where human sign language interpreters cannot be employed, they could give sign language users easier access to written and spoken information, and they could help people in learning sign language.
-                    </p>
-                    <!-- <h5>Cautionary note</h5> -->
-                    <p>
-                      We should emphasise that, to support face-to-face interaction between deaf and hearing people, a qualified human sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed or for purposes other than supporting face-to-face interaction, such as providing access to information or providing support in learning sign language.
-                   </p>
-                   <hr class="d-none d-lg-block mb-5 ml-0" />
 
-                   <!-- NS -->
-                   <h5>A case study: a sign language avatar for railway announcements</h5>
-                   <p class="mb-4">
-                     Public transport organisations, such as Dutch railway operator Nederlandse Spoorwegen (NS), generally communicate important messages through spoken announcements in the train or station. As a result, Deaf people miss crucial information. Because of varying levels of reading proficiency, textual information is not always a solution. Moreover, video footage is not scalable and will not yield satisfactory results when individual video parts need an update. Virtual sign language avatars can provide consistent, anonymous and scalable translations. For the development of a comprehensible and fluent sign language avatar, collaboration between experts in language technology, avatar technology and sign language has been fundamental. Click on the button below or on the image of the avatar to see a demo of this tool.
-                   </p>
-                   <div class="mb-4">
-                     <!-- <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button> -->
-                     <a class="btn btn-primary" href="ns-demo/index.html" target="_blank" role="button">Go to railway announcements demo</a>
-                   </div>
-                   <hr class="d-none d-lg-block mb-5 ml-0" />
-
-                   <!-- COVID -->
-                    <h5>A case study: text-to-sign translation for COVID-19 healthcare</h5>
-                    <p class="mb-4">
-                      It is challenging for healthcare professionals to communicate with Deaf patients <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">(Felllinger, Holzinger and Pollard, 2012)</a></b>, even more so in times of COVID-19 <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">(Mckee, Moran and Zazove, 2020)</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make lipreading impossible <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">(Grote and Izagaren,2020)</a></b> and interpreting via videorelay is not always viable. Building on the <b><a href="https://vh.cmp.uea.ac.uk/index.php/JASigning" target="_blank">JASigning avatar engine</a></b>, we have developed a tool which translates sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands (NGT). Click on the button below or on the image of the avatar to see a demo of this tool.
-                    </p>
-                    <div class="mb-4">
-                      <!-- <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button> -->
-                      <a class="btn btn-primary" href="healthcare-demo.html" target="_blank" role="button">Go to healthcare demo</a>
-                    </div>
-                   <hr class="d-none d-lg-block mb-0 ml-0" />
-                </div>
-            </div>
-
-            <!-- Column for GIF -->
-            <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
-              <!-- <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'"> -->
-              <!-- Science and Innovation awards -->
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe src="https://www.youtube.com/embed/_uk4fL7yXwQ?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-
-                <!-- NTR -->
-              <!-- <div class="mt-5">
-                <a href="https://www.npostart.nl/atlas/22-09-2021/VPWON_1328190" target="_blank"><img src="images/Atlas-2021.png" class="img-fluid" alt="A screenshot of the ATLAS interview segment on SignLab Amsterdam."></a>
-              </div> -->
-
-              <!-- filmpje Give me a Sign! -->
-              <!-- <div class="embed-responsive embed-responsive-16by9 mt-5">
-                <iframe src="https://www.youtube.com/embed/Jt8hyCPZWr0?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div> -->
-
-              <!-- Ns demo -->
-              <div class="mt-5">
-                <a href="ns-demo/index.html" target="_blank"><img src="images/railway_demo.png" class="img-fluid" alt="A screenshot of the signing avatar that leads to the railway announcements demo."></a>
-              </div>
-
-              <!-- Healthcare demo -->
-              <div class="mt-5">
-                <a href="healthcare-demo.html" target="_blank"><img src="images/healthcare_demo.png" class="img-fluid" alt="A screenshot of the signing avatar that leads to the healthcare demo."></a>
-              </div>
-
-
+              <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                  <h5>Text-to-sign translation using animated avatars</h5>
+                  <p class="mb-4">
+                    We are developing tools to translate text into sign language using animated avatars. Such tools have several potential applications. They could support communication between deaf and hearing people in situations where human sign language interpreters cannot be employed, they could give sign language users easier access to written and spoken information, and they could help people in learning sign language.
+                  </p>
+                  <!-- <h5>Cautionary note</h5> -->
+                  <p>
+                    We should emphasise that, to support face-to-face interaction between deaf and hearing people, a qualified human sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed or for purposes other than supporting face-to-face interaction, such as providing access to information or providing support in learning sign language.
+                 </p>
+                 <hr class="d-none d-lg-block mb-0 ml-0" />
             </div>
           </div>
+
+          <!-- Column for picture -->
+
+          <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe src="https://www.youtube.com/embed/_uk4fL7yXwQ?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+
+
+        <!-- Challenge Row NS section-->
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+            <!-- Column for text -->
+            <div class="col-12 col-md order-2">
+
+              <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                <h5>A case study: a sign language avatar for railway announcements</h5>
+                <p class="mb-4">
+                  Public transport organisations, such as Dutch railway operator Nederlandse Spoorwegen (NS), generally communicate important messages through spoken announcements in the train or station. As a result, Deaf people miss crucial information. Because of varying levels of reading proficiency, textual information is not always a solution. Moreover, video footage is not scalable and will not yield satisfactory results when individual video parts need an update. Virtual sign language avatars can provide consistent, anonymous and scalable translations. For the development of a comprehensible and fluent sign language avatar, collaboration between experts in language technology, avatar technology and sign language has been fundamental. Click on the button below or on the image of the avatar to see a demo of this tool.
+                </p>
+                <div class="mb-4">
+                  <!-- <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button> -->
+                  <a class="btn btn-primary" href="ns-demo/index.html" target="_blank" role="button">Go to railway announcements demo</a>
+                </div>
+                <hr class="d-none d-lg-block mb-0 ml-0" />
+            </div>
+          </div>
+
+          <!-- Column for picture -->
+
+          <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+            <a href="ns-demo/index.html" target="_blank"><img src="images/railway_demo.png" class="img-fluid" alt="A screenshot of the signing avatar that leads to the railway announcements demo."></a>
+          </div>
+        </div>
+
+
+        <!-- Challenge Row healthcare section-->
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+            <!-- Column for text -->
+            <div class="col-12 col-md order-2">
+
+              <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                <h5>A case study: text-to-sign translation for COVID-19 healthcare</h5>
+                <p class="mb-4">
+                  It is challenging for healthcare professionals to communicate with Deaf patients <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">(Felllinger, Holzinger and Pollard, 2012)</a></b>, even more so in times of COVID-19 <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">(Mckee, Moran and Zazove, 2020)</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make lipreading impossible <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">(Grote and Izagaren,2020)</a></b> and interpreting via videorelay is not always viable. Building on the <b><a href="https://vh.cmp.uea.ac.uk/index.php/JASigning" target="_blank">JASigning avatar engine</a></b>, we have developed a tool which translates sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlands (NGT). Click on the button below or on the image of the avatar to see a demo of this tool.
+                </p>
+                <div class="mb-4">
+                  <!-- <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button> -->
+                  <a class="btn btn-primary" href="healthcare-demo.html" target="_blank" role="button">Go to healthcare demo</a>
+                </div>
+               <hr class="d-none d-lg-block mb-0 ml-0" />
+            </div>
+          </div>
+
+          <!-- Column for picture -->
+
+          <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+            <a href="healthcare-demo.html" target="_blank"><img src="images/healthcare_demo.png" class="img-fluid" alt="A screenshot of the signing avatar that leads to the healthcare demo."></a>
+          </div>
+        </div>
+
     </div>
 
 </section>
