--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,24 @@
   <div class="row align-items-start no-gutters mb-4 mb-lg-5">
       <!-- Column for text -->
       <div class="col-12 col-md order-2">
-          <div class="project-text pb-1 w-100 my-auto text-left textDIV">
+        <div class="project-text pb-1 w-100 my-auto text-left textDIV">
+          <div class="collapseTransform">
+            <h5>Active Learning for Multilingual Fingerspelling Corpora</h5>
+              <p class="mb-4">
+                <b>Year:</b> 2022 <br>
+                <b>Authors:</b> S. Wang and E. Nalisnick <br>
+                <a href="publications/Active_Learning_for_Multilingual_Fingerspelling_Corpora.pdf" download="Wang">Download paper <i class="bi bi-download"></i></a>
+                <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
+              </p>
+              <div id="collapseOne" class="collapse">
+            <p class="mb-4">
+              We apply active learning to help with data scarcity problems in sign languages. In particular, we perform a novel analysis of the effect of pre-training. Since many sign languages are linguistic descendants of French sign language, they share hand configurations, which pre-training can hopefully exploit. We test this hypothesis on American, Chinese, German, and Irish fingerspelling corpora. We do observe a benefit from pre-training, but this may be due to visual rather than linguistic similarities.
+            </p>
+            </div>
+          </div>
+          <hr class="d-none d-lg-block mb-0 ml-0"/>
+        </div>
+          <div class="project-text pb-1 w-100 my-auto text-left publicationDIV">
             <div class="collapseTransform">
               <h5>Online Evaluation of Text-to-sign Translation by Deaf End Users: Some Methodological Recommendations</h5>
                 <p class="mb-4">
@@ -215,6 +232,7 @@
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
       </div>
+
 
       <!-- Column for GIF -->
       <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
