--- a/people.html
+++ b/people.html
@@ -82,15 +82,15 @@
                     <h5>Principal investigators</h5>
 
                     <p class="text-black-50 mb-3">
+                      <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">
+                        Marloes Oomen</a> 
+                      (VENI Postdoc)<br>
                       <a href="https://www.uva.nl/profiel/p/f/r.pfau/r.pfau.html" target="_blank">
                         Roland Pfau</a>
                       (Associate Professor)<br>
                       <a href="https://www.florisroelofsen.com/" target="_blank">
                         Floris Roelofsen</a>
                       (Associate Professor)<br>
-                      <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">
-                        Marloes Oomen</a> 
-                      (VENI Postdoc)<br>
                     </p>
                     <h5>
                       Senior staff
@@ -103,7 +103,6 @@
                       <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Eric Nalisnick</a> (Assistant Professor Machine Learning )<br>
                       <a href="https://www.uva.nl/profiel/b/e/r.g.belleman/r.g.belleman.html" target="_blank">Rob Belleman</a> (Lecturer Computer Graphics and Visualization)<br>
                       <a href="https://www.upf.edu/en/web/lsc-lab/entry/-/-/140362/adscripcion/raquel-veiga" target="_blank">Raquel Veiga Busto</a> (Postdoc)<br>
-                      <!-- Marloes Oomen <br> -->
                     </p>
                     <h5>
                       PhD students and junior researchers
@@ -111,15 +110,13 @@
                     <p class="text-black-50 mb-3">
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD student}<br>
                       Lyke Esselink (Researcher)<br>
+                      Natalie Hollain (Researcher)<br>
                       <!-- Britt van Gemert (Researcher)<br> -->
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD student)<br>
                       <a href="https://www.uva.nl/en/profile/l/i/v.delint/v.de-lint.html" target="_blank">Vanja de Lint</a> (PhD student)<br>
                       <a href="https://www.uva.nl/profiel/n/o/l.notartebalanquit/l.notarte-balanquit.html" target="_blank">Liberty Notarte Balanquit</a> (PhD student)<br>
                       <!-- Shani Mende-Gillings (Researcher)<br> -->
                       Daniël Vink (Researcher)<br>
-                      Loes Gennissen (Researcher)<br>
-                      Merel Atia (Researcher)<br>
-                      Roel de jeu (Researcher)<br>
                     </p>
 
                     <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
@@ -157,7 +154,10 @@
                Master and bachelor alumni
              </h5>
              <p class="text-black-50 mb-1">
-               <b>2022</b>: Britt van Gemert (MSc AI)<br>
+               <b>2022</b>: Britt van Gemert (MSc AI),
+               Loes Gennissen (BSc AI),
+               Merel Atia (BSc AI)
+               Roel de jeu (BSc CS)<br>
              </p>
              <p class="text-black-50 mb-1">
                <b>2021</b>: Mark van Hofwegen (BSc AI),
