Added researcher name

--- a/projects.html
+++ b/projects.html
@@ -129,6 +129,7 @@
             <p class="mb-4">
               <b>Grant type:</b> <a href="https://www.nwo.nl/en/news/funding-18-new-phds-humanities" target="_blank">NWO PhDs in the Humanities programme</a><br>
               <b>Project website:</b> <a href="https://www.nwo.nl/projecten/pgw20008" target="_blank">click here</a> <br>
+              <b>PhD Researcher:</b> Evgeniia (Jenia) Khristoforova <br>
               <b>Supervisors:</b> Roland Pfau, Enoch Aboh <br>
               <b>Year:</b> 2020-2024 <br>
             <b>Summary:</b>
