correct link to website

--- a/publications.html
+++ b/publications.html
@@ -243,7 +243,7 @@
         </form>
       </div>
 
-        <script src="https://bibbase.org/show?bib=signlab-amsterdam.com/bib/signlab.bib&theme=simple&commas=true&group0=year&fullnames=1&jsonp=1"></script>
+        <script src="https://bibbase.org/show?bib=www.signlab-amsterdam.nl/bib/signlab.bib&theme=simple&commas=true&group0=year&fullnames=1&jsonp=1"></script>
       <!-- </div> -->
 
 
