--- a/people.html
+++ b/people.html
@@ -83,7 +83,7 @@
 
                     <p class="text-black-50 mb-3">
                       <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">
-                        Marloes Oomen</a> 
+                        Marloes Oomen</a>
                       (VENI Postdoc)<br>
                       <a href="https://www.uva.nl/profiel/p/f/r.pfau/r.pfau.html" target="_blank">
                         Roland Pfau</a>
@@ -188,6 +188,7 @@
 <!-- Footer-->
 <footer class="footer bg-white small text-center text-black-50">
   <div style="line-height:150%;">
+    <br>&copy;2020 SignLab Amsterdam
     <br>
     <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com
   </div>
