update publications page

--- a/publications.html
+++ b/publications.html
@@ -197,7 +197,7 @@
 <!-- Publications section -->
 <section class="projects-section bg-light fadeIn" id="publications">
 <div class="container-fluid">
-  <!-- <div class="row align-items-start no-gutters mb-4 mb-lg-5"> -->
+  <div class="row align-items-start no-gutters mb-4 mb-lg-5 text-left">
       <div style="display:block;">
 
 
@@ -213,11 +213,10 @@
               <label for="selectPublicationType">Publication type</label>
               <select id="selectPublicationType" class="form-control pubSelect">
                 <option value="">All</div></option>
-                <option value="book/monograph">Textbook</option>
+                <option value="textbook/monograph">Textbook</option>
                 <option value="article{">Journal articles</option>
                 <option value="inproceedings">Conference papers</option>
                 <option value="incollection">Book chapters</option>
-                <!-- Aangepast: -->
                 <option value="phdthesis">PhD theses</option>
                 <option value="mastersthesis">MSc theses</option>
                 <option value="bachelorsthesis">BSc theses</option>
@@ -244,7 +243,7 @@
       </div>
 
         <script src="https://bibbase.org/show?bib=www.signlab-amsterdam.nl/bib/signlab.bib&theme=simple&commas=true&group0=year&fullnames=1&jsonp=1"></script>
-      <!-- </div> -->
+      </div>
 
 
 
