--- a/publications.html
+++ b/publications.html
@@ -198,6 +198,7 @@
 <section class="projects-section bg-light fadeIn" id="publications">
 <div class="container-fluid">
   <div class="row align-items-start no-gutters mb-4 mb-lg-5 text-left">
+    <div class="col-12 col-md order-2">
       <div style="display:block;">
 
 
@@ -236,7 +237,7 @@
             </div> -->
 
             <div class="col">
-              <button id="pubFormReset" type="reset" class="btn btn-outline-dark">Reset all</button>
+              <button id="pubFormReset" type="reset" class="btn btn-primary">Reset all</button>
             </div>
 
         </form>
@@ -247,6 +248,7 @@
 
 
 
+    </div>
     </div>
 
 </div>
