update margins on publications page

--- a/publications.html
+++ b/publications.html
@@ -195,10 +195,10 @@
 <!--================================================================-->
 
 <!-- Publications section -->
-<section class="projects-section bg-light fadeIn" id="publications">
+<section class="projects-section bg-light fadeIn" id="Publications">
 <div class="container-fluid">
-  <div class="row align-items-start no-gutters mb-4 mb-lg-5 text-left">
-    <div class="col-12 col-md order-2">
+  <div class="row no-gutters mb-4 mb-lg-5 text-left">
+    <div class="col-12 col-md-10">
       <div style="display:block;">
 
 
@@ -246,11 +246,7 @@
         <script src="https://bibbase.org/show?bib=www.signlab-amsterdam.nl/bib/signlab.bib&theme=simple&commas=true&group0=year&fullnames=1&jsonp=1"></script>
       </div>
 
-
-
     </div>
-    </div>
-
 </div>
 
 
