--- a/publications.html
+++ b/publications.html
@@ -214,10 +214,10 @@
               <label for="selectPublicationType">Publication type</label>
               <select id="selectPublicationType" class="form-control pubSelect">
                 <option value="">All</div></option>
-                <option value="textbook/monograph">Textbook</option>
+                <option value="book{">Books</option>
                 <option value="article{">Journal articles</option>
-                <option value="inproceedings">Conference papers</option>
-                <option value="incollection">Book chapters</option>
+                <option value="inproceedings{">Conference papers</option>
+                <option value="incollection{">Book chapters</option>
                 <option value="phdthesis">PhD theses</option>
                 <option value="mastersthesis">MSc theses</option>
                 <option value="bachelorsthesis">BSc theses</option>
@@ -257,7 +257,6 @@
 <!-- Footer-->
 <footer class="footer bg-white small text-center text-black-50">
   <div style="line-height:150%;">
-    <br>&copy;2020 SignLab Amsterdam
     <br>
     <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com
   </div>
