--- a/people.html
+++ b/people.html
@@ -82,15 +82,15 @@
                     <h5>Principal investigators</h5>
 
                     <p class="text-black-50 mb-3">
-                      <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">
-                        Marloes Oomen</a>
-                      (VENI Postdoc)<br>
                       <a href="https://www.uva.nl/profiel/p/f/r.pfau/r.pfau.html" target="_blank">
                         Roland Pfau</a>
                       (Associate Professor)<br>
                       <a href="https://www.florisroelofsen.com/" target="_blank">
                         Floris Roelofsen</a>
                       (Associate Professor)<br>
+                      <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">
+                        Marloes Oomen</a>
+                      (VENI Postdoc)<br>
                     </p>
                     <h5>
                       Senior staff
@@ -111,6 +111,7 @@
                     <p class="text-black-50 mb-3">
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD student}<br>
                       Lyke Esselink (MSc thesis project)<br>
+                      Marleen Gaasbeek (MSc thesis project)<br>
                       Natalie Hollain (MSc thesis project)<br>
                       <!-- Britt van Gemert (Researcher)<br> -->
                       <a href="https://www.uva.nl/en/profile/k/h/e.khristoforova/e.khristoforova.html" target="_blank">Jenia Khristoforova</a> (PhD student)<br>
