--- a/people.html
+++ b/people.html
@@ -82,28 +82,28 @@
                     <h5>Principal investigators</h5>
 
                     <p class="text-black-50 mb-3">
-                      <a href="https://www.uva.nl/profiel/p/f/r.pfau/r.pfau.html" target="_blank">
-                        Roland Pfau</a>
-                      (Associate Professor)<br>
                       <a href="https://www.florisroelofsen.com/" target="_blank">
                         Floris Roelofsen</a>
-                      (Associate Professor)<br>
+                      (Associate Professor Linguistics, Logic and AI)<br>
+                      <a href="https://www.uva.nl/profiel/p/f/r.pfau/r.pfau.html" target="_blank">
+                        Roland Pfau</a>
+                      (Associate Professor Linguistics)<br>
                       <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">
                         Marloes Oomen</a>
-                      (VENI Postdoc)<br>
+                      (VENI Postdoc Linguistics)<br>
                     </p>
                     <h5>
                       Senior staff
                     </h5>
                     <p class="text-black-50 mb-3">
-                      <a href="https://www.uva.nl/profiel/a/b/e.o.aboh/e.o.aboh.html" target="_blank"> Enoch Aboh</a> (Professor Language Learnability)<br>
+                      <a href="https://www.uva.nl/profiel/a/b/e.o.aboh/e.o.aboh.html" target="_blank"> Enoch Aboh</a> (Professor Linguistics)<br>
                       <a href="https://www.uva.nl/profiel/b/e/r.g.belleman/r.g.belleman.html" target="_blank">Rob Belleman</a> (Lecturer Computer Graphics and Visualization)<br>
-                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Eric Nalisnick</a> (Assistant Professor Machine Learning )<br>
+                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Eric Nalisnick</a> (Assistant Professor Machine Learning)<br>
                       <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT and Research Assistant)<br>
                       <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
-                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Sign Linguistics)<br>
+                      <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Linguistics)<br>
                       <a href="https://ps.is.mpg.de/~dtzionas" target="_blank">Dimitrios Tzionas</a> (Assistant Professor Computer Vision and Graphics)<br>
-                      <a href="https://www.upf.edu/en/web/lsc-lab/entry/-/-/140362/adscripcion/raquel-veiga" target="_blank">Raquel Veiga Busto</a> (Postdoc)<br>
+                      <a href="https://www.upf.edu/en/web/lsc-lab/entry/-/-/140362/adscripcion/raquel-veiga" target="_blank">Raquel Veiga Busto</a> (Postdoc Linguistics)<br>
                     </p>
                     <h5>
                       PhD students and junior researchers
