--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
                     <p class="mb-6 mt-6">
                       SignLab Amsterdam is a cross-faculty research lab at the University of Amsterdam, founded in 2020.
-                      It brings together a long tradition of sign linguistics in Amsterdam, starting with the pioneering work of
-                      <a href="https://nl.wikipedia.org/wiki/Bernard_Tervoort" target="_blank">Bernard Tervoort</a> in the 1950's,
+                      It brings together a long tradition of sign linguistics in Amsterdam
+                      <!-- , starting with the pioneering work of <a href="https://nl.wikipedia.org/wiki/Bernard_Tervoort" target="_blank">Bernard Tervoort</a> in the 1950's, -->
                       with recent advances in artificial intelligence.
                     </p>
                     <!-- <hr class="d-none d-lg-block mb-5 ml-0" /> -->
@@ -100,11 +100,13 @@
                     <hr class="d-none d-lg-block mb-5 ml-0" />
                     <h5>Applications</h5>
                     <p class="mb-4">
-                      Scientific investigation of sign languages is not only necessary to obtain a general understanding of human languages, but also to diminish the
+                      Scientific investigation of sign languages is not only necessary to obtain a general understanding of human languages,
+                      but can also contribute to diminishing the
                       <b><a href="https://beeldverhalen.npofocus.nl/waarom-is-gebarentaal-nodig/?fbclid=IwAR3_XDN8TnlzN_WZ1l-jfN9rYIXkH_XmyOyNSgVzBREox3cxArkTL-k2G2I" target="_blank">communication barrier</a></b> between deaf and hearing people. Deeper insights into the grammar of sign languages are essential in training sign language interpreters, to develop efficient curricula for sign language learners including hearing parents of deaf children, and to lay a foundation for sign language technology.
                     </p>
                     <p class="mb-4">
-                      We have developed a machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19. On the basis of the same technology, we have developed a prototype sign language avatar for railway announcements. For more information, visit our <b><a href="covid19/translate.html" target="_blank">Applications</a></b> page.
+                      We have developed a prototype machine translation tool to support communication between health care professionals and deaf patients
+                      in times of COVID-19, as well as a prototype sign language avatar for railway announcements. For more information, visit our <b><a href="covid19/translate.html" target="_blank">Applications</a></b> page.
                       <!-- Rename avatar translation to applications? -->
 						          <!-- <b><a href="covid19/index.html" target="_blank">
                         machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>. Moreover, we have developed a  -->
@@ -133,7 +135,6 @@
 <!-- Footer-->
 <footer class="footer bg-white small text-center text-black-50">
   <div style="line-height:150%;">
-    <br>&copy;2020 SignLab Amsterdam
     <br>
     <i class="bi bi-envelope"></i>: signlab.amsterdam@gmail.com
   </div>
