--- a/publications.html
+++ b/publications.html
@@ -237,7 +237,7 @@
             </div> -->
 
             <div class="col">
-              <button id="pubFormReset" type="reset" class="btn btn-primary">Reset all</button>
+              <button id="pubFormReset" type="reset" class="btn btn-primary">Reset</button>
             </div>
 
         </form>
