--- a/grammar.html
+++ b/grammar.html
@@ -88,12 +88,12 @@
                     <h6><b>Questions</b></h6>
                     <!-- <h5 class="mt-3">Grammaticalization</h5> -->
                     <p>
-                      One of our focus areas concerns the way in which questions are expressed in sign languages.
+                      One of our current focus areas concerns the way in which questions are expressed in sign languages.
                       It is known that signers often convey that they are asking a question by means of non-manual markers,
                       for instance by raising their eyebrows. But little is known to date about the full range of non-manual
-                      markers that are used to mark questions, and how exactly they differ in terms of discourse function.
-                      For instance, some non-manual markers might be used to express a neutral question (e.g., Have we met before?)
-                      while others might be used to express biased questions (e.g., Haven't we met before?).
+                      markers that are used to express questions, and how exactly they differ in terms of discourse function.
+                      For instance, some non-manual markers might be used to express a neutral question (e.g., Have you met Susan before?)
+                      while others might be used to express biased questions (e.g., Haven't you met Susan before?).
                       We are investigating how different kinds of questions are expressed across sign languages.
                       In doing so we do not only make use of traditional methods to collect and analyze data,
                       but also develop new methods making use of computer vision and machine learning techniques.
