--- a/index.html
+++ b/index.html
@@ -82,36 +82,48 @@
                     </a>
                     </p> -->
 
+                    <h5>Welcome</h5>
                     <p class="mb-6 mt-6">
                       SignLab Amsterdam is a cross-faculty research lab at the University of Amsterdam, founded in 2020.
                       It brings together a long tradition of sign linguistics in Amsterdam
                       <!-- , starting with the pioneering work of <a href="https://nl.wikipedia.org/wiki/Bernard_Tervoort" target="_blank">Bernard Tervoort</a> in the 1950's, -->
                       with recent advances in artificial intelligence.
+                      <br>
                     </p>
-                    <!-- <hr class="d-none d-lg-block mb-5 ml-0" /> -->
+                    <hr class="d-none d-lg-block mb-5 ml-0" />
 
                     <h5>Sign language linguistics</h5>
                     <p class="mb-4">
-                      Investigating sign languages has the potential to yield important linguistic insights which are more difficult to obtain by investigating spoken languages alone, because linguistic structures are sometimes easier to detect in sign languages than in spoken languages. Quite literally, sign languages often make linguistic structure <b><a href="https://doi.org/10.1515/tl-2018-0012" target="_blank">directly visible</a></b>.
+                      Investigating sign languages has the potential to yield important linguistic insights which are more difficult to obtain by investigating spoken languages alone, because linguistic structures are sometimes easier to detect in sign languages than in spoken languages. Quite literally, sign languages often make linguistic structures <b><a href="https://doi.org/10.1515/tl-2018-0012" target="_blank">directly visible</a></b>.
                     </p>
                     <p class="mb-4">
-                      We investigate the structure of signs and signed sentences, paying special attention to cross-modal and intra-modal variation and similarities. That is, sign language structures are not only compared to structures identified for spoken languages, but sign languages are also compared to each other, in an effort to determine in how far the modality of signal transmission impacts grammatical structures.
+                      We investigate the structure of signs and signed sentences, paying special attention to cross-modal and intra-modal variation and similarities.
+                      <!-- That is, sign language structures are not only compared to structures identified for spoken languages, but sign languages are also compared to each other, in an effort to determine in how far the modality of signal transmission impacts grammatical structures.-->
+                      In doing so, we do not only make use of traditional methods to collect and analyze sign language data,
+                      but also develop new methods making use of computer vision and machine learning techniques.
+                      See the <b><a href="grammar.html" target="_blank">Theoretical Contributions</a></b>
+                      page for more information.
                     </p>
                     <hr class="d-none d-lg-block mb-5 ml-0" />
                     <h5>Applications</h5>
                     <p class="mb-4">
                       Scientific investigation of sign languages is not only necessary to obtain a general understanding of human languages,
                       but can also contribute to diminishing the
-                      <b><a href="https://beeldverhalen.npofocus.nl/waarom-is-gebarentaal-nodig/?fbclid=IwAR3_XDN8TnlzN_WZ1l-jfN9rYIXkH_XmyOyNSgVzBREox3cxArkTL-k2G2I" target="_blank">communication barrier</a></b> between deaf and hearing people. Deeper insights into the grammar of sign languages are essential in training sign language interpreters, to develop efficient curricula for sign language learners including hearing parents of deaf children, and to lay a foundation for sign language technology.
+                      <b><a href="https://beeldverhalen.npofocus.nl/waarom-is-gebarentaal-nodig/?fbclid=IwAR3_XDN8TnlzN_WZ1l-jfN9rYIXkH_XmyOyNSgVzBREox3cxArkTL-k2G2I" target="_blank">communication barrier</a></b> between deaf and hearing people.
+                      Deeper insights into the grammar of sign languages are essential in training sign language interpreters, 
+                      to develop efficient curricula for sign language learners including hearing parents of deaf children, 
+                      and to lay a foundation for sign language technology.
+                      Visit our <b><a href="translate.html" target="_blank">Applications</a></b> for more information
+                      about some of our applied work.
                     </p>
-                    <p class="mb-4">
+                    <!-- <p class="mb-4">
                       We have developed a prototype machine translation tool to support communication between health care professionals and deaf patients
-                      in times of COVID-19, as well as a prototype sign language avatar for railway announcements. For more information, visit our <b><a href="covid19/translate.html" target="_blank">Applications</a></b> page.
-                      <!-- Rename avatar translation to applications? -->
-						          <!-- <b><a href="covid19/index.html" target="_blank">
-                        machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>. Moreover, we have developed a  -->
-                      In the future, we intend to develop several other applications, for instance to translate announcements at airports, and to support hearing parents of deaf children in learning sign language.
-                    </p>
+                      in times of COVID-19, as well as a prototype sign language avatar for railway announcements.  
+                      Rename avatar translation to applications?
+						          <b><a href="covid19/index.html" target="_blank">
+                        machine translation tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>. Moreover, we have developed a  
+                      In the future, we intend to develop several other applications, for instance to translate announcements at airports, and to support hearing parents of deaf children in learning sign language. 
+                    </p> -->
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
             </div>
