--- a/people.html
+++ b/people.html
@@ -110,7 +110,7 @@
                     </h5>
                     <p class="text-black-50 mb-3">
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (PhD student}<br>
-                      Lyke Esselink (MSc thesis project)<br>
+                      <a href="https://www.uva.nl/profiel/e/s/l.d.esselink/l.d.esselink.html" target="_blank">Lyke Esselink</a> (MSc thesis project)<br>
                       Marleen Gaasbeek (MSc thesis project)<br>
                       Natalie Hollain (MSc thesis project)<br>
                       <!-- Britt van Gemert (Researcher)<br> -->
