--- a/publications.html
+++ b/publications.html
@@ -221,7 +221,7 @@
                 <option value="phdthesis">PhD theses</option>
                 <option value="mastersthesis">MSc theses</option>
                 <option value="bachelorsthesis">BSc theses</option>
-                <option value="manuscript/handout/slides/technical report/misc/unpublished">Other</option>
+                <option value="manuscript/handout/slides/technical report/misc">Other</option>
               </select>
             </div>
 
