--- a/index.html
+++ b/index.html
@@ -108,13 +108,12 @@
                     <h5>Applications</h5>
                     <p class="mb-4">
                       Scientific investigation of sign languages is not only necessary to obtain a general understanding of human languages,
-                      but can also contribute to diminishing the
-                      <b><a href="https://beeldverhalen.npofocus.nl/waarom-is-gebarentaal-nodig/?fbclid=IwAR3_XDN8TnlzN_WZ1l-jfN9rYIXkH_XmyOyNSgVzBREox3cxArkTL-k2G2I" target="_blank">communication barrier</a></b> between deaf and hearing people.
-                      Deeper insights into the grammar of sign languages are essential in training sign language interpreters, 
-                      to develop efficient curricula for sign language learners including hearing parents of deaf children, 
+                      but also has important applications.
+                      Deeper insight into the grammar of sign languages is essential 
+                      to develop efficient curricula for sign language learners, including sign language interpreters and 
+                      hearing parents of deaf children, 
                       and to lay a foundation for sign language technology.
-                      Visit our <b><a href="translate.html" target="_blank">Applications</a></b> for more information
-                      about some of our applied work.
+                      Visit our <b><a href="translate.html" target="_blank">Applications</a></b> page for more information.
                     </p>
                     <!-- <p class="mb-4">
                       We have developed a prototype machine translation tool to support communication between health care professionals and deaf patients
