--- a/grammar.html
+++ b/grammar.html
@@ -89,8 +89,8 @@
                     <p>
                       Based on the patterns we find in the data, we develop theoretical models of how
                       signed sentences are structured and how they are interpreted. These models make precise predictions, which are tested
-                      on further data, for instance from other sign languages. This allows us refine our theoretical models further and further,
-                      and develop a better understanding of how sign languages, and human languages in general, work.
+                      on further data, for instance from other sign languages. This allows us to refine our theoretical models further and further,
+                      and gain a better understanding of how sign languages, and human languages in general, work.
                     </p>
                     <!-- <p class="mb-4">
                       Comparative studies on languages have revealed striking differences as well as interesting similarities
