Added Woord en Gebaar article, adjusted navbar alignment

--- a/media.html
+++ b/media.html
@@ -63,6 +63,32 @@
 <section class="projects-section bg-light fadeIn" id="Media">
     <div class="container-fluid">
 
+
+      <!-- Challenge Row W&G-->
+      <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+          <!-- Column for text -->
+          <div class="col-12 col-md order-2">
+
+          <div class="project-text pb-1 w-100 text-left textDIV">
+              <h5>Sign language avatars: a glimpse of the future</h5>
+              <p class="mb-4">
+                <b>Publisher:</b> <a href="https://woordengebaar.nl/weng/" target="_blank">Woord en Gebaar</a><br>
+                <b>Medium:</b> Article<br>
+                <b>Language:</b> Dutch <br>
+                <b>Date:</b> October 2022 <br>
+                <b>Link:</b> Download article <a href="https://www.signlab-amsterdam.nl/publications/WG-interview-2022.pdf" target="_blank">here</a><br>
+              <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
+        </div>
+
+        <!-- Column for picture -->
+        <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+          <a href="https://www.signlab-amsterdam.nl/publications/WG-interview-2022.pdf" target="_blank"><img src="images/Woord_gebaar.png" class="img-fluid" alt="A screenshot of the Woord en Gebaar article."></a>
+        </div>
+
+      </div>
+
+
       <!-- Challenge Row AT5-->
       <div class="row align-items-start no-gutters mb-4 mb-lg-5">
           <!-- Column for text -->
@@ -83,7 +109,7 @@
 
         <!-- Column for picture -->
         <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
-          <a href="https://www.at5.nl/artikelen/214659/meer-animo-voor-minor-nederlandse-gebarentaal-sinds-corona-door-irma-sluis" target="_blank"><img src="images/at5artikel.png" class="img-fluid" alt="A screenshot of the Medical Technology article."></a>
+          <a href="https://www.at5.nl/artikelen/214659/meer-animo-voor-minor-nederlandse-gebarentaal-sinds-corona-door-irma-sluis" target="_blank"><img src="images/at5artikel.png" class="img-fluid" alt="A screenshot of the AT5 article."></a>
         </div>
 
       </div>
