--- a/people.html
+++ b/people.html
@@ -88,7 +88,7 @@
                       <a href="https://www.uva.nl/profiel/p/f/r.pfau/r.pfau.html" target="_blank">
                         Roland Pfau</a>
                       (Associate Professor Linguistics)<br>
-                      <a href="https://www.researchgate.net/profile/Marloes-Oomen" target="_blank">
+                      <a href="https://www.uva.nl/profiel/o/o/m.oomen2/m.oomen2.html" target="_blank">
                         Marloes Oomen</a>
                       (VENI Postdoc Linguistics)<br>
                     </p>
